k8s/database.yaml
# PostgreSQL StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bot-postgresql-db
spec:
  serviceName: bot-postgresql-db-service
  selector:
    matchLabels:
      app: bot-postgresql-db
  replicas: 1
  template:
    metadata:
      labels:
        app: bot-postgresql-db
    spec:
      containers:
        - name: bot-postgresql-db
          image: postgres:latest
          volumeMounts:
            - name: bot-postgresql-db-disk
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: bot-postgresql-db-disk
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---

# PostgreSQL StatefulSet Service
apiVersion: v1
kind: Service
metadata:
  name: bot-postgresql-db-service
spec:
  selector:
    app: bot-postgresql-db
  type: LoadBalancer
  ports:
    - port: 5432
      targetPort: 5432
